--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <h1> Kirsty's Portfolio Site </h1>
+    <style>
+        body {
+       background-image: "/images/background.jpg";
+        }
+        </style>
+    <h1 class="title"> Kirsty's Portfolio Site </h1>
+    <nav></nav>
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
     <p> Welcome to my website. Please enjoy your stay</p>
     <h2>Summary</h2>
     <ul>
