--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
         <div class="jumbotron">
             <h1 class="display-4">Hello. Welcome to my Portfolio site.</h1>
-            <p class="lead">Welcome to my website. Please enjoy your stay.</p>
+            <p class="lead">Welcome to my website. Please feel free to contact me through the contacts page.</p>
             <hr class="my-4">
         </div>
 
